refactor: simplify list collection in stream